Removed the Credentials

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -243,10 +243,10 @@
                 </div>
                 <div class="column right">
                     <div class="text">Message me</div>
-                    <form action="https://api.web3forms.com/submit" method="POST">
+                    <form action="#" method="POST">
                         <div class="fields">
                             <div class="field name">
-                                <input type="hidden" name="access_key" value="142babba-509b-4659-b2ee-3c4b2e7436be">
+                                <input type="hidden" name="access_key" value="#">
                                 <input type="text" name="name" placeholder="Name" class="contact-input" required>
                             </div>
                             <div class="field email">
